# surge-ruleset-forge

./: .gitignore  LICENSE  README.md  pyproject.toml  sources.yaml
.github/workflows/: build.yml
src/forge/: __init__.py  __main__.py  build.py  dedupe.py  diff.py  emit.py  fetch.py  models.py  parse.py
tests/: test_diff.py  test_emit.py  test_parse.py
