[project]
name = "surge-ruleset-forge"
version = "0.1.0"
description = "Fetch, merge, dedupe and classify upstream Surge rulesets into clean, subscribable .list files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
forge = "forge.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
